switching computers but i need to put all the nav buttons in the same container to avoid overlap and just float to either direction

--- a/css-styles/myStyles.css
+++ b/css-styles/myStyles.css
@@ -64,12 +64,11 @@ body {
 @media screen and (max-width: 700px) {
     .sidenav {
         width: 100%;
-        height: auto;
         position: relative;
     }
     .social-container {
-        position: unset !important ;
-        position: absolute;
+        position: unset  ;
+        height: 100%;
     }
     .nav-buttons-container a {
         float: left;
@@ -77,6 +76,7 @@ body {
     }
     .social-container a {
         float: right;
+        height: 100%;
     }
 
     section.body-content {margin-left: 0;}
@@ -84,34 +84,35 @@ body {
 
 }
 @media screen and (max-width: 400px) {
+    .nav-buttons-container {
+        width: 100%;
+        top: 0;
+    }
 
     .nav-buttons-container a {
+        
         text-align: center;
         right: 0;
         left: 0;
         top: 0;
     }
+    .social-container {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        z-index: 0;
+    }
     .social-container a{
+        float: right;
+        height: calc(100% - 29px) !important ;
+        border-radius: unset;
+
         right: 0;
         left: 0;
-        position: unset !important ;
-
-    }
-
-
-
-    .sidenav a {
-        text-align: center;
-        
-        float: none;
-    }
-    .social-container a {
         overflow: auto;
         text-align: center;
         margin: 0;
-        padding: 14px;
-        font-size: 80%;
-        float: left;
+        padding: 10px;
     }
 }
 
@@ -122,14 +123,6 @@ body {
     right: 0;
 }
 
-/* navigation buttons
-.home {
-
-}
-.proj-page {
-}
-.ex-page {
-}*/
 
 .social-container {
     bottom: 0; 
